# AphelionEngine

./: .gitignore  Cargo.toml  rustfmt.toml
editor/: Cargo.toml
editor/src/: camera.rs  gui.rs  main.rs  workbench_scene.rs
editor/src/gui/: colors.rs  config.rs  dynamic_panel_widget.rs  icons.rs  menu_widget.rs  mod.rs  split_panel_tree.rs  state.rs  style.rs  toolbar_widget.rs  widgets.rs
editor/src/gui/sections/: asset_server_section.rs  log_section.rs  mod.rs  scene_config_section.rs  viewport_section.rs
editor/src/gui/widgets/: dropdown_widget.rs  dynamic_panel_widget.rs  hierarchy_widget.rs  icon_button.rs  leading_toolbar_widget.rs  menu_toolbar_widget.rs  menu_widget.rs  mod.rs  properties_widget.rs  shadow_widget.rs  tab_widget.rs  toolbar_widget.rs  top_toolbar_widget.rs
editor/src/gui/windows/: gizmo_settings.rs  material_creator.rs  mod.rs
editor/src/utils/: log.rs
engine/: Cargo.toml
engine/src/: app.rs  components.rs  graphics.rs  host.rs  lib.rs  plugin.rs  scene.rs  schedule.rs  types.rs  wgpu_graphics.rs  workload.rs
engine/src/graphics/: buffer.rs  camera.rs  components.rs  gpu.rs  material.rs  mesh.rs  mod.rs  passes.rs  rendering.rs  scene.rs  uniforms.rs  vertex.rs
engine/src/graphics/passes/: debug_gui_pass.rs  dynamic_mesh_pass.rs  forward_pass.rs  frame_composition_pass.rs  gui_pass.rs  (+4 more)
engine/src/host/: components.rs  events.rs  window.rs
engine/src/plugin/: egui.rs  graphics.rs  iced.rs  renderer.rs  scene.rs  window.rs
engine/src/scene/: asset_loader.rs  asset_server.rs  camera.rs  components.rs  hierarchy.rs  keyboard.rs  mod.rs  mouse.rs  perspective.rs  projection.rs  scene.rs  scene_state.rs
engine/src/wgpu_graphics/: buffer.rs  components.rs  gpu.rs  mod.rs  passes.rs  pipelines.rs  rendering.rs  uniforms.rs  vertex.rs
(+54 files in other folders)
