[package]
name = "editor"
version = "0.1.0"
edition = "2021"

[dependencies]
engine = { path = "../engine" }
shipyard = "0.6.2"
egui-gizmo = { git = "https://github.com/AngelLandoni/egui-gizmo", branch = "main" }
egui_extras = { version = "*", features = ["all_loaders"] }
rfd = "=0.14.0"
image = { version = "0.24.9", features = ["jpeg", "png"] }
