[package]
name = "engine"
version = "0.1.0"
edition = "2021"

[dependencies]
#winit = { version = "0.29.4", default-features = false, features = ["rwh_05"] }
winit = { git = "https://github.com/iced-rs/winit.git", rev = "25b5dc1758723699015c37b0a64f16ceb9c546ea", features = ["rwh_05"] }
shipyard = "0.6.2"
wgpu = "0.18.0"
crossbeam-queue = "0.3.11"
raw-window-handle = "0.5.2"
futures-lite = "2.2.0"
iced = { git = "https://github.com/iced-rs/iced", branch = "update-winit" }
iced_wgpu = { git = "https://github.com/iced-rs/iced", branch = "update-winit" }
iced_winit = { git = "https://github.com/iced-rs/iced", branch = "update-winit" }
iced_widget = { git = "https://github.com/iced-rs/iced", branch = "update-winit" }
iced_core = { git = "https://github.com/iced-rs/iced", branch = "update-winit" }
iced_runtime = { git = "https://github.com/iced-rs/iced", branch = "update-winit" }