[package]
name = "engine"
version = "0.1.0"
edition = "2021"

[dependencies]
winit = { version = "0.29.7", features = ["rwh_05"] }
egui-wgpu = "0.25.0"
wgpu = "0.18.0"
egui-winit = "0.25.0"
egui = "0.25.0"
shipyard = "0.6.2"
crossbeam-queue = "0.3.11"
raw-window-handle = "0.5.2"
downcast-rs = "1.2.0"
futures-lite = "2.2.0"
nalgebra = "0.32.3"
bytemuck = "1.14.0"
ahash = "0.8.7"
tobj = "4.0.1"